refactor: introduce MapStruct mappers for entity-to-DTO conversion and update controllers accordingly