@@ -2,6 +2,7 @@ package com.example.petclinic.api.controller;
 
 import com.example.petclinic.api.dto.SpecialityRequest;
 import com.example.petclinic.api.dto.SpecialityResponse;
+import com.example.petclinic.api.mapper.SpecialityMapper;
 import com.example.petclinic.domain.entity.Speciality;
 import com.example.petclinic.service.SpecialityService;
 import jakarta.validation.Valid;
@@ -19,12 +20,13 @@ import java.util.List;
 public class SpecialityController {
 
     private final SpecialityService specialityService;
+    private final SpecialityMapper specialityMapper;
 
     @GetMapping
     public List<SpecialityResponse> getAll() {
         return specialityService.findAll().stream()
-                .map(SpecialityResponse::fromEntity)
-                .collect(java.util.stream.Collectors.toList());
+                .map(specialityMapper::toSpecialityResponse)
+                .toList();
     }
 
     @GetMapping("/{id}")
@@ -33,26 +35,28 @@ public class SpecialityController {
         if (speciality == null) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(SpecialityResponse.fromEntity(speciality));
+        return ResponseEntity.ok(specialityMapper.toSpecialityResponse(speciality));
     }
 
     @PostMapping
     public ResponseEntity<SpecialityResponse> create(@Valid @RequestBody SpecialityRequest request) {
-        final var entity = new Speciality(null, request.name(), new HashSet<>());
+        final var entity = specialityMapper.toSpeciality(request);
+        entity.setVets(new HashSet<>());
 
         final var saved = specialityService.save(entity);
-        return ResponseEntity.status(HttpStatus.CREATED).body(SpecialityResponse.fromEntity(saved));
+        return ResponseEntity.status(HttpStatus.CREATED).body(specialityMapper.toSpecialityResponse(saved));
     }
 
     @PutMapping("/{id}")
     public ResponseEntity<SpecialityResponse> update(@PathVariable Long id, @Valid @RequestBody SpecialityRequest request) {
-        final var entity = new Speciality(null, request.name(), new HashSet<>());
+        final var entity = specialityMapper.toSpeciality(request);
+        entity.setVets(new HashSet<>());
 
         final var updated = specialityService.update(id, entity);
         if (updated == null) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(SpecialityResponse.fromEntity(updated));
+        return ResponseEntity.ok(specialityMapper.toSpecialityResponse(updated));
     }
 
     @DeleteMapping("/{id}")
