@@ -2,7 +2,7 @@ package com.example.petclinic.api.controller;
 
 import com.example.petclinic.api.dto.VetRequest;
 import com.example.petclinic.api.dto.VetResponse;
-import com.example.petclinic.domain.entity.Speciality;
+import com.example.petclinic.api.mapper.VetMapper;
 import com.example.petclinic.domain.entity.Vet;
 import com.example.petclinic.service.VetService;
 import jakarta.validation.Valid;
@@ -12,8 +12,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.HashSet;
-import java.util.Set;
 
 @RestController
 @RequestMapping("/vets")
@@ -21,12 +19,13 @@ import java.util.Set;
 public class VetController {
 
     private final VetService vetService;
+    private final VetMapper vetMapper;
 
     @GetMapping
     public List<VetResponse> getAll() {
         return vetService.findAll().stream()
-                .map(VetResponse::fromEntity)
-                .collect(java.util.stream.Collectors.toList());
+                .map(vetMapper::toVetResponse)
+                .toList();
     }
 
     @GetMapping("/{id}")
@@ -35,38 +34,26 @@ public class VetController {
         if (vet == null) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(VetResponse.fromEntity(vet));
+        return ResponseEntity.ok(vetMapper.toVetResponse(vet));
     }
 
     @PostMapping
     public ResponseEntity<VetResponse> create(@Valid @RequestBody VetRequest request) {
-        Set<Speciality> specialties = request.specialityIds() != null
-                ? request.specialityIds().stream()
-                .map(id -> new Speciality(id, null, new HashSet<>()))
-                .collect(java.util.stream.Collectors.toSet())
-                : Set.of();
-
-        final var entity = new Vet(null, request.firstName(), request.lastName(), specialties);
+        final var entity = vetMapper.toVet(request);
 
         final var saved = vetService.save(entity);
-        return ResponseEntity.status(HttpStatus.CREATED).body(VetResponse.fromEntity(saved));
+        return ResponseEntity.status(HttpStatus.CREATED).body(vetMapper.toVetResponse(saved));
     }
 
     @PutMapping("/{id}")
     public ResponseEntity<VetResponse> update(@PathVariable Long id, @Valid @RequestBody VetRequest request) {
-        Set<Speciality> specialties = request.specialityIds() != null
-                ? request.specialityIds().stream()
-                .map(sId -> new Speciality(sId, null, new HashSet<>()))
-                .collect(java.util.stream.Collectors.toSet())
-                : Set.of();
-
-        final var entity = new Vet(null, request.firstName(), request.lastName(), specialties);
+        final var entity = vetMapper.toVet(request);
 
         final var updated = vetService.update(id, entity);
         if (updated == null) {
             return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.ok(VetResponse.fromEntity(updated));
+        return ResponseEntity.ok(vetMapper.toVetResponse(updated));
     }
 
     @DeleteMapping("/{id}")
